--- a/style.css
+++ b/style.css
@@ -1000,6 +1000,7 @@ body:not(.theme-preset-active) footer#colophon {
   color: #fff;
   text-align: center;
   line-height: 2;
+  margin-bottom: 5rem;
 }
 .copyright {
   font-size: 1rem;
@@ -1009,8 +1010,13 @@ body:not(.theme-preset-active) footer#colophon {
 
 @media screen and (max-width: 767px) {
   #masthead .navbar-nav > li > a {
-    padding-bottom: 0.938rem;
-    padding-top: 0.938rem;
+    padding: 0.938rem 10px !important; /*mad solution!*/
+  }
+
+  .navbar-brand {
+    position: absolute;
+    right: -7px;
+    top: -18px;
   }
 }
 /*--------------------------------------------------------------
@@ -1023,6 +1029,12 @@ body:not(.theme-preset-active) footer#colophon {
   html {
     font-size: 95%;
   }
+
+  .navbar-brand {
+    position: absolute;
+    right: -7px;
+    top: -18px;
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -1033,6 +1045,12 @@ body:not(.theme-preset-active) footer#colophon {
     background: transparent;
     box-shadow: none;
     border: none;
+  }
+
+  .navbar-brand {
+    position: absolute;
+    right: -7px;
+    top: -18px;
   }
 }
 /*--------------------------------------------------------------
@@ -1049,6 +1067,12 @@ body:not(.theme-preset-active) footer#colophon {
 @media only screen and (max-width: 960px) {
   html {
     font-size: 85%;
+  }
+
+  .navbar-brand {
+    position: absolute;
+    right: -7px;
+    top: -18px;
   }
 }
 /*--------------------------------------------------------------
