--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -181,6 +181,14 @@ a {
   -webkit-text-decoration-skip: objects;
 }
 
+.btn-social a:hover, .btn-social a:focus {
+  color: #262626;
+}
+
+.btn-social a:active {
+  color: var(--secondary);
+}
+
 a:hover {
   color: #d9d9d9;
   text-decoration: underline;
@@ -526,6 +534,29 @@ mark,
   border-radius: 0.25rem;
   max-width: 100%;
   height: auto;
+}
+
+.img-cropped-gradient {
+  height: 343px;
+  overflow: hidden;
+}
+
+.img-cropped-gradient:before {
+  margin-top: -4rem;
+}
+
+.img-cropped-gradient:before {
+  content: '';
+  width: 100%;
+  height: 80px;
+  display: block;
+  position: relative;
+  left: 0;
+  top: 328px;
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,0.95) 100%);
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,0.95) 100%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,0.95) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 );
 }
 
 .figure {
@@ -2530,7 +2561,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   z-index: 999;
   position: fixed;
   display: inline-block;
-  right: 3.5rem;
+  right: 6.2rem;
   top: 42vh;
   width: 40px;
 }
@@ -2548,7 +2579,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   margin: .7rem auto;
 }
 
