--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -2561,8 +2561,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   z-index: 999;
   position: fixed;
   display: inline-block;
-  right: 6.2rem;
-  top: 42vh;
+  right: 96px;
+  bottom: -.5rem;
   width: 40px;
 }
 
