--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -25,7 +25,7 @@
   --creamwhite: #f5f5f5;
   --white: #fff;
   --gray: #7A8288;
-  --gray-dark: #3A3F44;
+  --gray-dark: #797979;
   --primary: #262626;
   --secondary: #e11b1a;
   --success: #62c462;
@@ -190,7 +190,7 @@ a {
 }
 
 a:hover {
-  color: #d9d9d9;
+  color: var(--creamwhite);
   text-decoration: underline;
 }
 
@@ -2543,8 +2543,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
           user-select: none;
   padding: 0.65rem 1rem;
   font-size: 0.9375rem;
-  line-height: .83;
-  border-radius: 0.25rem;
+  line-height: 1.1;
+  border-radius: 3px; /*0.25rem*/
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4032,6 +4032,10 @@ tbody.collapse.show {
 
 .nav-link:hover, .nav-link:focus {
   text-decoration: none;
+}
+
+.nav-link:focus {
+  color: var(--creamwhite);
 }
 
 .nav-link.disabled {
