--- a/style.css
+++ b/style.css
@@ -73,13 +73,12 @@ video {
   height: 0;
 }
 .videoWrapper iframe {
-  transform: scale(1.15);
+  transform: scale(1.14);
   margin-top: -.8rem;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
 }
 
 .videoWrapper:after {
@@ -313,6 +312,19 @@ table {
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
+#inputPostalCode, #postalCodeSubmit {
+  width: 100%;
+  height: 44px;
+  line-height: 22px;
+}
+
+#inputPostalCode {
+  color: var(--dark-grey);
+  font-size: 1.245rem;
+  font-weight: 200;
+  letter-spacing: 1px;
+}
+
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
