--- a/style.css
+++ b/style.css
@@ -312,13 +312,13 @@ table {
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
-#inputPostalCode, #postalCodeSubmit {
+.inputPostalCode, #postalCodeSubmit {
   width: 100%;
   height: 44px;
   line-height: 22px;
 }
 
-#inputPostalCode {
+.inputPostalCode {
   color: var(--dark-grey);
   font-size: 1.245rem;
   font-weight: 200;
