--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -2033,7 +2033,7 @@ pre code {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
-  border-radius: 0.25rem;
+  border-radius: 3px; /* 0.25rem */
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2081,6 +2081,12 @@ pre code {
 
 select.form-control:not([size]):not([multiple]) {
   height: calc(2.90625rem + 2px);
+  max-height: 43px;
+  width: 100%;
+  color: var(--dark-grey);
+  font-size: 1.245rem;
+  font-weight: 200;
+  letter-spacing: 1px;
 }
 
 select.form-control:focus::-ms-value {
