--- a/style.css
+++ b/style.css
@@ -312,10 +312,16 @@ table {
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
-.inputPostalCode, #postalCodeSubmit {
+.inputPostalCode, .postalCodeSubmit {
   width: 100%;
   height: 44px;
   line-height: 22px;
+  border-radius: 3px;
+}
+
+.postalCodeSubmit {
+  font-size: 1.245rem !important;
+  letter-spacing: .5px;
 }
 
 .inputPostalCode {
