--- a/style.css
+++ b/style.css
@@ -331,6 +331,10 @@ table {
   letter-spacing: 1px;
 }
 
+.wpsl-pepper-store-list {
+  margin-bottom: 3rem;
+}
+
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
