--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -536,6 +536,29 @@ mark,
   height: auto;
 }
 
+.post-thumbnail {
+	margin-bottom: 1.875rem;
+	height: 71vh;
+  background-size: cover;
+}
+
+.post-thumbnail:after {
+	content: '';
+  width: 100%;
+  height: 180px;
+  position: absolute;
+  bottom: 9rem;
+	background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,100) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
+}
+
+.post-thumbnail-inner-content {
+  background: rgba(0, 0, 0, 0.5);
+  padding: 2rem 3rem;
+}
+
 .img-cropped-gradient {
   height: 343px;
   overflow: hidden;
@@ -2675,6 +2698,14 @@ fieldset:disabled a.btn {
   font-weight: 400;
   line-height: 23px;
   font-size: 1.1rem;
+  letter-spacing: 1px;
+}
+
+.btn-bigger {
+  padding: 8px 4.5rem;
+  font-weight: 500;
+  line-height: 46px;
+  font-size: 1.2rem;
   letter-spacing: 1px;
 }
 
@@ -6340,7 +6371,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #272B30 !important;
+  background-color: var(--primary) !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
