--- a/inc/assets/css/presets/typography/roboto-roboto.css
+++ b/inc/assets/css/presets/typography/roboto-roboto.css
@@ -7,7 +7,13 @@ body {
 
 --------------------------------------------- */
 
-h3, h4, h6 {
+h1 {
+	font-size: 4rem;
+	letter-spacing: 1px;
+	margin: unset !important;
+}
+
+h2, h3, h4, h6 {
 	font-family: 'Roboto', sans-serif;
 	margin: 0 0 10px;
 }
@@ -28,6 +34,11 @@ p, p.overview {
 p.overview {
 	margin-bottom: 1rem;
 	line-height: 2;
+	color: var(--creamwhite);
+}
+p.recipes {
+	margin: 1rem auto 2rem;
+	line-height: 1.5;
 	color: var(--creamwhite);
 }
 h2.overview {
@@ -67,21 +78,4 @@ div#page-sub-header p {
 }
 .entry-meta {
 	font-family: 'Roboto', sans-serif;
-}
-.post-thumbnail {
-	margin-bottom: 1.875rem;
-}
-
-.post-thumbnail:after {
-	content: '';
-    width: 100%;
-    height: 180px;
-    display: inline-block;
-    position: relative;
-    left: 0;
-    bottom: 160px;
-	background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,100) 82%, rgba(0,0,0,0.95) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,0.95) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,0.95) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
 }
