--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -75,7 +75,12 @@ body {
   line-height: 1.5;
   color: var(--creamwhite);
   text-align: left;
-  background-color: #272B30;
+  background-image: linear-gradient(
+    to top,
+    transparent 269px, 
+    #262626 269px, 
+    #262626 0
+  );
 }
 
 [tabindex="-1"]:focus {
@@ -546,8 +551,10 @@ mark,
 	content: '';
   width: 100%;
   height: 180px;
-  position: absolute;
-  bottom: 9rem;
+  position: relative;
+  display: inline-flex;
+  z-index: 1;
+  bottom: 11rem;
 	background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,100) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -2702,6 +2709,9 @@ fieldset:disabled a.btn {
 }
 
 .btn-bigger {
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
   padding: 8px 4.5rem;
   font-weight: 500;
   line-height: 46px;
