added body class php function again,  added some media queries, added margin-right-class for more space on recipes grid,  added recipes title list-item without li element

--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -83,6 +83,12 @@ body {
   );
 }
 
+/* Extra Margin-left for Recipes Grid*/
+
+.ml-6 {
+  margin-left: 6rem !important;
+}
+
 [tabindex="-1"]:focus {
   outline: 0 !important;
 }
