--- a/inc/assets/css/presets/typography/roboto-roboto.css
+++ b/inc/assets/css/presets/typography/roboto-roboto.css
@@ -37,10 +37,32 @@ p.overview {
 	color: var(--creamwhite);
 }
 p.recipes {
+	font-size: 1.149rem;
 	margin: 1rem auto 2rem;
 	line-height: 1.5;
 	color: var(--creamwhite);
 }
+
+h3.recipes-step {
+	font-size: 1.5rem;
+	letter-spacing: unset;
+	position: relative;
+    left: -8px;
+}
+
+h3.recipes-step:before {
+	content: '';
+    position: relative;
+    z-index: 999;
+    width: 7px;
+    height: 7px;
+    background-color: var(--secondary);
+    border-radius: 3.5px;
+    right: .5rem;
+    bottom: .4rem;
+    display: inline-flex;
+}
+
 h2.overview {
 	font-size: 3.749rem;
 }
