added z-index page for optimal view with sticky footer

--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -86,7 +86,7 @@ body {
 /* Extra Margin-left for Recipes Grid*/
 
 .ml-6 {
-  margin-left: 6rem !important;
+  margin-left: 6rem;
 }
 
 [tabindex="-1"]:focus {
