--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ video {
   display: inline-block;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,100) 95%, rgba(0,0,0,1) 100%);
   background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,100) 95%,rgba(0,0,0,1) 100%);
   background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,100) 95%,rgba(0,0,0,1) 100%);
@@ -1072,6 +1072,13 @@ body:not(.theme-preset-active) footer#colophon {
   .sticky-footer { 
     content: '';
     position: relative;
+  }
+
+  .videoWrapper {
+    height: 60vh;
+    transform: scaleY(1.09);
+    z-index: 1 !important;
+    margin-bottom: 1.7rem;
   }
 
   .ml-6 {
