--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -2604,7 +2604,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   position: fixed;
   display: inline-block;
   right: 96px;
-  bottom: -.5rem;
+  top: 40vh;
   width: 40px;
 }
 
