--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -2662,13 +2662,13 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #3A3F44;
+  background-color: var(--primary);
   border: unset !important;
 }
-
 .btn-primary:hover {
   color: #fff;
-  background-color: #282c2f;
+  background-color: #0a0b0d;
+  transition: all .3s;
 }
 
 .btn-primary:focus, .btn-primary.focus {
@@ -2685,7 +2685,10 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #232628;
+  background-color: transparent;
+  border: 2px solid var(--secondary) !important;
+  width: calc(100% - 4px);
+  height: calc(100% - 4px);
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
@@ -9286,11 +9289,11 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 
-.btn:not([disabled]):not(.disabled).active, .btn.disabled {
+/*.btn:not([disabled]):not(.disabled).active, .btn.disabled {
   border-color: rgba(0, 0, 0, 0.6);
   -webkit-box-shadow: none;
           box-shadow: none;
-}
+}*/
 
 .btn:hover, .btn:focus, .btn:not([disabled]):not(.disabled):active, .btn:not([disabled]):not(.disabled):active:hover, .btn:not([disabled]):not(.disabled).active:hover {
   border-color: rgba(0, 0, 0, 0.6);
