4o4 page optimized & header for mobile optimized & recipes-post functionality created

--- a/style.css
+++ b/style.css
@@ -1175,8 +1175,12 @@ body:not(.theme-preset-active) footer#colophon {
 
   .navbar-brand {
     position: absolute;
-    right: -17px;
-    top: -17px;
+    right: -39px;
+    top: -14px;
+  }
+
+  .navbar-brand a img {
+    max-width: 88%;
   }
 }
 /*--------------------------------------------------------------
