--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -2600,7 +2600,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 }
 
 .btn-appointment {
-  border: 1px solid var(--secondary);
+  line-height: 1.4;
+  border: 2px solid rgba(225,27,26,0.3)!important;
   font-weight: 400;
 }
 
