--- a/style.css
+++ b/style.css
@@ -341,6 +341,7 @@ header#masthead {
   background-color: #262626;
   box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
   padding: 1.066rem 1rem;
+  z-index: 999;
 }
 
 .navbar-brand > a {
