--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -4112,7 +4112,7 @@ tbody.collapse.show {
   min-width: 250px;
   max-width: 250px;
   padding: 0 32px;
-  height: 100vh;
+  height: 91vh;
   position: fixed;
   transform: translateX(-100%);
   transition: all 0.5s ease-in-out;
@@ -4124,7 +4124,7 @@ tbody.collapse.show {
   width: 100%;
   position: absolute;
   left: 0;
-  top: 85vh;
+  bottom: 2rem;
 }
 
 .sidebar-brand:before, .sidebar-brand:after {
@@ -4157,7 +4157,6 @@ tbody.collapse.show {
   /* transparent black */
   background: rgba(0, 0, 0, 0.7);
   /* middle layer, i.e. appears below the sidebar */
-  z-index: 998;
   opacity: 0;
   /* animate the transition */
   transition: all 0.5s ease-in-out;
