--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -63,6 +63,11 @@ html {
   width: device-width;
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
@@ -558,14 +563,14 @@ mark,
   background-size: cover;
 }
 
-.post-thumbnail:after {
+.post-thumbnail:before {
 	content: '';
   width: 100%;
   height: 180px;
-  position: relative;
+  position: absolute;
   display: inline-flex;
   z-index: 1;
-  bottom: 11rem;
+  top: 46%;
 	background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,100) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -4112,7 +4117,7 @@ tbody.collapse.show {
   min-width: 250px;
   max-width: 250px;
   padding: 0 32px;
-  height: 91vh;
+  height: 91.3vh;
   position: fixed;
   transform: translateX(-100%);
   transition: all 0.5s ease-in-out;
