removed unnesecary margin-classes added color definitions for seperated theme-selections

--- a/inc/assets/css/presets/theme-option/cuciniale-light.css
+++ b/inc/assets/css/presets/theme-option/cuciniale-light.css
@@ -88,12 +88,6 @@ body {
   );
 }
 
-/* Extra Margin-left for Recipes Grid*/
-
-.ml-6 {
-  margin-left: 6rem;
-}
-
 [tabindex="-1"]:focus {
   outline: 0 !important;
 }
@@ -4683,6 +4677,10 @@ tbody.collapse.show {
 .navbar-expand .dropup .dropdown-menu {
   top: auto;
   bottom: 100%;
+}
+
+.navbar-dark {
+  background-color: var(--primary);
 }
 
 .navbar-light .navbar-brand {
