--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -552,24 +552,26 @@ mark,
 }
 
 .post-thumbnail {
+  max-width: 100%;
 	margin-bottom: 1.875rem;
 	height: 71vh;
   background-size: cover;
 }
 
-.post-thumbnail:before {
+/*.post-thumbnail::after {
 	content: '';
   width: 100%;
   height: 180px;
-  position: absolute;
-  display: inline-flex;
+  margin-top: -180px;
+  position: relative;
+  display: block;
   z-index: 1;
-  top: 46%;
-	background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,100) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
-}
+  left: 0;
+	background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,100) 82%, rgba(0,0,0,1) 100%);
+	background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%);
+	background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,100) 82%,rgba(0,0,0,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 );
+}*/
 
 .post-thumbnail-inner-content {
   background: rgba(0, 0, 0, 0.5);
@@ -577,7 +579,7 @@ mark,
 }
 
 .img-cropped-gradient {
-  height: 343px;
+  height: 344px;
   overflow: hidden;
 }
 
