--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ header#masthead {
   height: calc(78vh - 95px);
 }
 
-.gradient-end {
+.gradient-end-page {
   width: 100%;
   height: 260px;
   position: absolute;
@@ -376,6 +376,19 @@ header#masthead {
   background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
+}
+
+.gradient-end-post {
+  width: 100%;
+  height: 260px;
+  position: relative;
+  margin-top: -260px;
+  display: block;
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
+
 }
 
 body:not(.theme-preset-active) #page-sub-header h1 {
@@ -1061,6 +1074,11 @@ body:not(.theme-preset-active) footer#colophon {
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 
+
+  .post-thumbnail-inner-content {
+    padding: 1rem !important;
+  }
+
   .btn-overview { /*mad solution! */
     padding-left: 1rem !important; 
     padding-right: 1rem !important;
@@ -1078,10 +1096,6 @@ body:not(.theme-preset-active) footer#colophon {
     width: 94%;
     font-size: 1.5rem;
     padding: 10px 8px;
-  }
-
-  .post-thumbnail:after {
-    top: 58% !important;
   }
 
   h3.recipes-step:before {
