paralax on scroll

--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -557,6 +557,7 @@ mark,
 	margin-bottom: 1.875rem;
 	height: 71vh;
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 /*.post-thumbnail::after {
