--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -298,6 +298,25 @@ textarea {
   line-height: inherit;
 }
 
+.contact-input {
+  border: unset;
+  color: var(--dark-grey);
+  background: var(--creamwhite);
+  border-radius: 3px;
+  height: auto;
+  padding: 6px 12px;
+  margin: 0;
+  font-size: 1.245rem;
+  font-weight: 200;
+  letter-spacing: 1px;
+}
+
+.contact-input:focus {
+  outline: unset;
+  box-shadow: inset 0 0 14px var(--secondary);
+  transition: all .3s;
+}
+
 button,
 input {
   overflow: visible;
@@ -2607,10 +2626,14 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
 }
 
-.btn-cta {
+.btn-cta, .pushbutton-wide {
   font-size: 1.15rem;
   padding: 10px 8px;
   width: 100%;
+}
+
+.pushbutton-wide {
+  border-radius: 4px !important;
 }
 
 .btn-appointment {
@@ -2685,12 +2708,13 @@ fieldset:disabled a.btn {
   pointer-events: none;
 }
 
-.btn-primary {
+.btn-primary, .pushbutton-wide {
   color: #fff;
   background-color: var(--primary);
   border: unset !important;
 }
-.btn-primary:hover {
+
+.btn-primary:hover, .pushbutton-wide:hover {
   color: #fff;
   background-color: #0a0b0d;
   transition: all .3s;
