--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -3508,6 +3508,8 @@ tbody.collapse.show {
   margin:  0 auto;
   /*padding-top: 3rem;*/
   background: #000;
+  position: relative;
+  z-index: 10;
 }
 
 .dropleft .dropdown-toggle::after {
