added justify-middle on footer-widget left and right area & added image resize for footer-widget

--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -3512,6 +3512,10 @@ tbody.collapse.show {
   z-index: 10;
 }
 
+.widget_media_image img {
+  max-width: 120px !important;
+}
+
 .dropleft .dropdown-toggle::after {
   display: inline-block;
   width: 0;
