--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -2658,7 +2658,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   position: fixed;
   display: inline-block;
   right: 96px;
-  top: 40vh;
+  top: 37vh;
   width: 40px;
   transition: all .3s;
 }
@@ -9618,12 +9618,11 @@ legend {
 }
 
 .input-group-addon {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#8a9196), color-stop(60%, #7A8288), to(#70787d));
-  background-image: linear-gradient(#8a9196, #7A8288 60%, #70787d);
-  background-repeat: no-repeat;
-  -webkit-filter: none;
-          filter: none;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  background-color: var(--primary);
+  line-height: 2.3;
+  padding: 0 18px 0 16px;
+  position: relative;
+  right: -2px;
   color: #fff;
 }
 
