--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -9618,12 +9618,23 @@ legend {
 }
 
 .input-group-addon {
+  min-width: 52.41px;
   background-color: var(--primary);
   line-height: 2.3;
+  max-height: 44px;
   padding: 0 18px 0 16px;
   position: relative;
   right: -2px;
   color: #fff;
+}
+
+.boxed-container {
+  padding: 0 5.5rem 0 0 !important;
+}
+
+/*Full-width Inputs for contact form 7 plugin*/
+.wpcf7-form-control-wrap {
+  width: calc(100% - 52.41px);
 }
 
 .nav-tabs .nav-link,
