--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -298,6 +298,20 @@ textarea {
   line-height: inherit;
 }
 
+.contact-thumbnail::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,.75);
+}
+
+.mt-ultra {
+  margin-top: 27vh;
+}
+
 .contact-input {
   border: unset;
   color: var(--dark-grey);
