--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ div.wpcf7-response-output {
 }
 
 .inputPostalCode, .postalCodeSubmit {
+  color: var(--dark-grey);
   width: 100%;
   height: 44px;
   line-height: 22px;
@@ -329,8 +330,7 @@ div.wpcf7-response-output {
 }
 
 .inputPostalCode {
-  color: var(--dark-grey);
-  font-size: 1.245rem;
+  font-size: 1.445rem !important;
   font-weight: 200;
   letter-spacing: 1px;
 }
@@ -1080,6 +1080,10 @@ body:not(.theme-preset-active) footer#colophon {
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 
+  #contact-form .wp-block-spacer {
+    display: none;
+  }
+
   .mt-ultra {
     margin-top: 0 !important;
   }
@@ -1090,6 +1094,7 @@ body:not(.theme-preset-active) footer#colophon {
   }
 
   .boxed-container {
+    margin-top: 3rem;
     padding: 0 27px !important;
   }
 
