--- a/style.css
+++ b/style.css
@@ -801,7 +801,7 @@ a img.aligncenter {
 .nav > li > a:focus,
 .nav > li > a:hover {
   transition: color .3s;
-  color: var(--secondary);
+  color: var(--primary);
   text-decoration: none;
 }
 .half-rule {
