more padding boxed-container contact & auto-max-height on contact-widget-area

--- a/inc/assets/css/presets/theme-option/cuciniale-light.css
+++ b/inc/assets/css/presets/theme-option/cuciniale-light.css
@@ -9586,7 +9586,7 @@ legend {
 }
 
 .boxed-container {
-  padding: 0 5.5rem 0 0 !important;
+  padding: 0 5.5rem 14rem 0;
 }
 
 /*Full-width Inputs for contact form 7 plugin*/
