--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -9647,7 +9647,7 @@ legend {
 }
 
 .boxed-container {
-  padding: 0 5.5rem 0 0;
+  padding: 0 5.5rem 14rem 0;
 }
 
 /*Full-width Inputs for contact form 7 plugin*/
