--- a/style.css
+++ b/style.css
@@ -66,41 +66,53 @@ video {
   vertical-align: baseline;
 }
 
-.videoWrapper {
-  overflow: hidden;
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  padding-top: 25px;
-  height: 0;
+.lazy {
+  background: #000;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
-.videoWrapper iframe {
-  transform: scale(1.14);
-  margin-top: -.8rem;
+
+#home-banner-box {
+  overflow: hidden;
+}
+
+.home-banner.loading .video-background {
+  opacity: 0; }
+
+.video-background {
+  position: relative;
+  top: 50%;
+  left: 0;
+  padding-top: 56.25%;
+  width: 100%;
+  z-index:997;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: 2s opacity ease;
+  transition: 2s opacity ease;
+  opacity: 1; }
+
+.video-foreground,
+.video-background iframe {
   position: absolute;
-  top: 0;
+  transform: scale(1.15);
+  top: 50%;
   left: 0;
   width: 100%;
-}
+  height: 100%;
+  pointer-events: none; }
 
-/*.videoWrapper:before {
-  content: "";
-  position: absolute;
-  bottom: 2rem;
-  left: calc(50% - 30px);
-  width: 60px;
-  height: 60px;
-  z-index: 999;
-  background: #FFF;
-}*/
-
-.videoWrapper:after {
+.home-banner:after {
   content: '';
   width: 100%;
   height: 160px;
   display: inline-block;
   position: absolute;
   left: 0;
-  bottom: -1px;
+  bottom: 185px;
+  z-index: 997;
   background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,100) 95%, rgba(0,0,0,1) 100%);
   background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,100) 95%,rgba(0,0,0,1) 100%);
   background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,100) 95%,rgba(0,0,0,1) 100%);
@@ -1127,14 +1139,6 @@ body:not(.theme-preset-active) footer#colophon {
     padding-left: 1rem !important; 
     padding-right: 1rem !important;
     margin-bottom: 1.5rem;
-  }
-
-  .videoWrapper {
-    height: 35vh;
-    padding-top: 7.5 !important;
-    transform: scaleY(1.16);
-    z-index: 1 !important;
-    margin-bottom: 1.7rem;
   }
 
   .btn-cta {
