--- a/style.css
+++ b/style.css
@@ -66,19 +66,13 @@ video {
   vertical-align: baseline;
 }
 
-.lazy {
-  background: #000;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-}
-
 #home-banner-box {
   overflow: hidden;
 }
 
 .home-banner.loading .video-background {
-  opacity: 0; }
+  opacity: 0;
+}
 
 .video-background {
   position: relative;
@@ -90,33 +84,34 @@ video {
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  -webkit-transition: 2s opacity ease;
-  transition: 2s opacity ease;
+  -webkit-transition: 1s opacity ease;
+  transition: 1s opacity ease;
   opacity: 1; }
 
 .video-foreground,
 .video-background iframe {
   position: absolute;
   transform: scale(1.15);
-  top: 50%;
+  top: 43%;
   left: 0;
   width: 100%;
   height: 100%;
-  pointer-events: none; }
+  pointer-events: none; 
+}
 
-.home-banner:after {
-  content: '';
-  width: 100%;
-  height: 160px;
-  display: inline-block;
+.video-background:after {
+  content: "";
+  height: 168px;
+  z-index: 999;
   position: absolute;
+  display: inline-block;
+  width: 100%;
+  bottom: -50.2%;
   left: 0;
-  bottom: 185px;
-  z-index: 997;
-  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,100) 95%, rgba(0,0,0,1) 100%);
-  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,100) 95%,rgba(0,0,0,1) 100%);
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,100) 95%,rgba(0,0,0,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 );
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
 }
 
 audio:not([controls]) {
@@ -418,7 +413,6 @@ header#masthead {
   background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
-
 }
 
 body:not(.theme-preset-active) #page-sub-header h1 {
