--- a/inc/assets/css/presets/theme-option/cuciniale-light.css
+++ b/inc/assets/css/presets/theme-option/cuciniale-light.css
@@ -78,7 +78,6 @@ body {
   font-size: 1.15rem; /*0.9375rem*/
   font-weight: 300;
   line-height: 1.5;
-  color: var(--creamwhite);
   text-align: left;
   background-image: linear-gradient(
     to top,
@@ -185,14 +184,14 @@ sup {
 }
 
 a {
-  color: #fff;
+  color: var(--dark);
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
 
 .btn-social a:hover, .btn-social a:focus {
-  color: #262626;
+  color: var(--creamwhite);
 }
 
 .btn-social a:active {
@@ -592,10 +591,9 @@ mark,
   position: relative;
   left: 0;
   top: 328px;
-  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,0.95) 100%);
-  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,0.95) 100%);
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,0.95) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 );
+  background: -moz-linear-gradient(top, rgba(245,245,245,0) 0%, rgba(245,245,245,0.95) 82%, rgba(245,245,245,0.95) 100%);
+  background: -webkit-linear-gradient(top, rgba(245,245,245,0) 0%,rgba(245,245,245,0.95) 82%,rgba(245,245,245,0.95) 100%);
+  background: linear-gradient(to bottom, rgba(245,245,245,0) 0%,rgba(245,245,245,0.95) 82%,rgba(245,245,245,0.95) 100%);
 }
 
 .figure {
@@ -2642,8 +2640,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   width: 40px;
   height: 40px;
   border-radius: 20px;
-  border: 2px solid #FFF;
-  color: white;
+  border: 2px solid var(--dark);
+  color: var(--dark);
   display: flex;
   justify-content: center;
   text-align-last: center;
@@ -2653,9 +2651,9 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 }
 
 .btn-social:hover, .btn-social:focus {
-  background: #FFF;
-  color: #060708;
-  border: 2px solid #FFF;
+  background: var(--dark);
+  color: var(--creamwhite);
+  border: 2px solid var(--dark);
   transition: all .3s;
 }
 
@@ -2743,6 +2741,24 @@ fieldset:disabled a.btn {
   line-height: 23px;
   font-size: 1.1rem;
   letter-spacing: 1px;
+  border-radius: 3px;
+}
+
+.block-overview {
+  width: 100%;
+  margin-top: 1rem;
+  font-weight: 300;
+  font-size: 1.1rem;
+  font-size: 1.1rem;
+  letter-spacing: .5px;
+  border-radius: 3px;
+  color: #FFF !important;
+  background-color: var(--secondary);
+  border: unset;
+  line-height: 16px;
+  padding: 10px 2.2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .btn-bigger {
@@ -4749,7 +4765,7 @@ tbody.collapse.show {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: var(--creamwhite);
+  color: var(--gray-dark);
 }
 
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus, .nav-link:hover, .nav-link:focus {
@@ -4777,11 +4793,11 @@ tbody.collapse.show {
 
 .navbar-dark .navbar-toggler-icon {
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAHMAAABkCAMAAACCTv/3AAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAAZQTFRF////5ubmueBsSwAAAAJ0Uk5T/wDltzBKAAAAPklEQVR42uzYQQ0AAAgDseHfNC4IyVoD912WAACUm3uampqampqamq+aAAD+IVtTU1NTU1NT0z8EAFBsBRgAX+kR+Qam138AAAAASUVORK5CYII=");
-  color: var(--creamwhite);
+  filter: invert(1);
 }
 
 .navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(245, 255, 255, 0.5);
 }
 
 .navbar-dark .navbar-text a {
@@ -6880,6 +6896,36 @@ button.bg-dark:focus {
   width: 100%;
   height: 100%;
   border: 0;
+}
+
+.video-background {
+  position: relative;
+  top: 50%;
+  left: 0;
+  padding-top: 56.25%;
+  width: 100%;
+  z-index:997;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: 1s opacity ease;
+  transition: 1s opacity ease;
+  opacity: 1; 
+}
+
+.video-background:after {
+  content: "";
+  height: 80px;
+  z-index: 1;
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  bottom: -50.2%;
+  left: 0;
+  background: -moz-linear-gradient(top, rgba(245,245,245,0) 0%, rgba(245,245,245,0.95) 82%, rgba(245,245,245,1) 100%);
+  background: -webkit-linear-gradient(top, rgba(245,245,245,0) 0%,rgba(245,245,245,0.95) 82%,rgba(245,245,245,1) 100%);
+  background: linear-gradient(to bottom, rgba(245,245,245,0) 0%,rgba(245,245,245,0.95) 82%,rgba(245,245,245,1) 100%);
+  /* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); */
 }
 
 .embed-responsive-21by9::before {
