--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -29,7 +29,7 @@
   --gray: #7A8288;
   --gray-dark: #797979;
   --primary: #e11b1a;
-  --secondary: #970e0e; 
+  --secondary: #720a0a; 
   --success: #62c462;
   --info: #5bc0de;
   --warning: #f89406;
@@ -2812,6 +2812,23 @@ fieldset:disabled a.btn {
   line-height: 23px;
   font-size: 1.1rem;
   letter-spacing: 1px;
+  border-radius: 3px;
+}
+
+.block-overview {
+  width: 100%;
+  margin-top: 1rem;
+  font-weight: 300;
+  font-size: 1.1rem;
+  letter-spacing: .5px;
+  border-radius: 3px;
+  color: #FFF;
+  background-color: var(--secondary);
+  border: unset;
+  line-height: 16px;
+  padding: 10px 2.2rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .btn-bigger {
@@ -6992,6 +7009,36 @@ button.bg-dark:focus {
   width: 100%;
   height: 100%;
   border: 0;
+}
+
+.video-background {
+  position: relative;
+  top: 50%;
+  left: 0;
+  padding-top: 56.25%;
+  width: 100%;
+  z-index:997;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: 1s opacity ease;
+  transition: 1s opacity ease;
+  opacity: 1; 
+}
+
+.video-background:after {
+  content: "";
+  height: 80px;
+  z-index: 1;
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  bottom: -50.2%;
+  left: 0;
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%);
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 );
 }
 
 .embed-responsive-21by9::before {
