--- a/style.css
+++ b/style.css
@@ -74,20 +74,6 @@ video {
   opacity: 0;
 }
 
-.video-background {
-  position: relative;
-  top: 50%;
-  left: 0;
-  padding-top: 56.25%;
-  width: 100%;
-  z-index:997;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-transition: 1s opacity ease;
-  transition: 1s opacity ease;
-  opacity: 1; }
-
 .video-foreground,
 .video-background iframe {
   position: absolute;
@@ -97,21 +83,6 @@ video {
   width: 100%;
   height: 100%;
   pointer-events: none; 
-}
-
-.video-background:after {
-  content: "";
-  height: 168px;
-  z-index: 999;
-  position: absolute;
-  display: inline-block;
-  width: 100%;
-  bottom: -50.2%;
-  left: 0;
-  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 ); /* IE6-9 */
 }
 
 audio:not([controls]) {
@@ -431,8 +402,9 @@ body:not(.theme-preset-active) #page-sub-header h1 {
   font-weight: 300;
 }
 body:not(.theme-preset-active) #page-sub-header p {
-color: #212529;
+  color: transparent;
 }
+
 a.page-scroller {
   color: #333;
   font-size: 2.6rem;
@@ -1098,25 +1070,15 @@ body:not(.theme-preset-active) footer#colophon {
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 
+  
+  .block-overview {
+    padding: 10px 1rem !important;
+  }
+  
   .video-foreground, .video-background iframe {
     transform: scale(1.4);
     top: 42%;
   }
-
-  .video-background:after {
-    content: "";
-    height: 80px;
-    z-index: 1;
-    position: absolute;
-    display: inline-block;
-    width: 100%;
-    bottom: -50.2%;
-    left: 0;
-    background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.95) 82%, rgba(0,0,0,1) 100%);
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%);
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.95) 82%,rgba(0,0,0,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#f2000000',GradientType=0 );
-}
 
   .circled-buttons {
     top: calc(70vh - 298.73px) !important;
