--- a/inc/assets/css/presets/theme-option/cuciniale.css
+++ b/inc/assets/css/presets/theme-option/cuciniale.css
@@ -446,6 +446,11 @@ template {
   display: none !important;
 }
 
+#colophon, .entry-footer {
+  position: relative;
+  z-index: 10;
+}
+
 h1, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
